--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="bg-gray-100">
+    <%= render "shared/menu" %>
+
+    <main class="container mx-auto mt-16 px-5">
       <%= yield %>
     </main>
   </body>
