--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,20 @@
-<% content_for :title, "New user" %>
+<% content_for :title, "Création de compte" %>
 
-<div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New user</h1>
-
+<div class="w-full flex justify-center">
   <%= render "form", user: @user %>
-
-  <%= link_to "Back to users", users_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
+
+<script>
+  function togglePassword(fieldId, button) {
+    const field = document.getElementById(fieldId);
+    const icon = button.querySelector("svg");
+
+    if (field.type === "password") {
+      field.type = "text";
+      icon.classList.add("text-blue-500");
+    } else {
+      field.type = "password";
+      icon.classList.remove("text-blue-500");
+    }
+  }
+</script>
