--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,7 @@
 <div class="w-full max-w-md mx-auto bg-white p-8 rounded-lg shadow-sm">
-  <h1 class="text-2xl font-bold text-center mb-6">Création de compte</h1>
+  <h1 class="text-2xl font-bold text-center mb-6">
+    <%= controller.action_name == "edit" ? "Mise à jour" : "Création de compte" %>
+  </h1>
 
   <%= form_with(model: user, class: "contents") do |form| %>
     <% if user.errors.any? %>
@@ -38,17 +40,45 @@
       </button>
     </div>
 
-
-    <div class="mb-4">
-      <%= form.submit "Créer", class: "w-full py-3 bg-yellow-400 hover:bg-yellow-500 text-gray-800 font-bold rounded-md cursor-pointer text-lg" %>
-    </div>
-
-    <% if controller.action_name == "new" %>
-      <p class="text-center text-sm mt-2 text-gray-500">
-        Déjà un compte ?
-        <%= link_to "Se connecter", login_path, class: "text-blue-600 hover:underline font-medium" %>
-      </p>
+    <% if admin? %>
+      <div class="mb-6">
+        <div class="flex items-center justify-between">
+          <span class="text-sm font-medium text-gray-700">Accorder les droits administrateur</span>
+          <label class="inline-flex relative items-center cursor-pointer">
+            <%= form.check_box :is_admin, class: "sr-only peer" %>
+            <div class="w-11 h-6 bg-gray-200 peer-checked:bg-green-500 rounded-full peer relative after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:after:translate-x-full peer-checked:after:border-white"></div>
+          </label>
+        </div>
+      </div>
     <% end %>
 
+    <div class="mb-4">
+      <%= form.submit(controller.action_name == "edit" ? "Mettre à jour" : "Créer", class: "w-full py-3 bg-yellow-400 hover:bg-yellow-500 text-gray-800 font-bold rounded-md cursor-pointer text-lg") %>
+    </div>
+
+    
+  <% end %>
+  <% if controller.action_name == "new" %>
+    <p class="text-center text-sm mt-2 text-gray-500">
+      Déjà un compte ?
+      <%= link_to "Se connecter", login_path, class: "text-blue-600 hover:underline font-medium" %>
+    </p>
+  <% elsif controller.action_name == "edit" %>
+    <div class="mb-4">
+      <%= button_to "Supprimer le compte", user_path(user),
+          method: :delete,
+          data: { turbo_confirm: "Es-tu sûr de vouloir supprimer ce compte ?" },
+          class: "w-full py-3 bg-red-600 hover:bg-red-500 text-white font-bold rounded-md cursor-pointer text-lg" %>
+    </div>
+    <div class="text-center mt-4 space-y-2 text-sm">
+      <p>
+        <%= link_to "Voir le compte", user_path(user), class: "text-blue-600 hover:underline font-medium" %>
+      </p>
+      <% if admin? %>
+        <p>
+          <%= link_to "Voir tous les utilisateurs", users_path, class: "text-blue-600 hover:underline font-medium" %>
+        </p>
+      <% end %>
+    </div>
   <% end %>
 </div>
