feat(layout): add footer and enhance menu for improved navigation and user experience

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,6 @@
     <main class="container mx-auto mt-16 px-5">
       <%= yield %>
     </main>
+    <%= render 'shared/footer' %>
   </body>
 </html>
