feat(i18n): traduire les textes de l'interface en français pour une meilleure accessibilité

--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -5,7 +5,7 @@
         <svg class="h-6 w-6 text-red-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
         </svg>
-        <h2 class="font-semibold"><%= pluralize(match.errors.count, "error") %> prohibited this match from being saved:</h2>
+        <h2 class="font-semibold"><%= pluralize(match.errors.count, "error") %> interdit la sauvegarde de ce match :</h2>
       </div>
 
       <ul class="list-disc ml-10 mt-2">
@@ -20,14 +20,14 @@
     <div class="space-y-2">
       <%= form.label :team1_id, class: "block text-sm font-medium text-gray-700" %>
       <%= form.collection_select :team1_id, Team.all, :id, :name,
-                                 { prompt: "Select team 1" },
+                                 { prompt: "Sélectionnez l'équipe 1" },
                                  class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50" %>
     </div>
 
     <div class="space-y-2">
       <%= form.label :team2_id, class: "block text-sm font-medium text-gray-700" %>
       <%= form.collection_select :team2_id, Team.all, :id, :name,
-                                 { prompt: "Select team 2" },
+                                 { prompt: "Sélectionnez l'équipe 2" },
                                  class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50" %>
     </div>
 
@@ -39,13 +39,13 @@
 
     <div class="md:flex md:space-x-4 space-y-4 md:space-y-0">
       <div class="w-full space-y-2">
-        <%= form.label :score_team1, "Score Team 1", class: "block text-sm font-medium text-gray-700" %>
+        <%= form.label :score_team1, "Score Équipe 1", class: "block text-sm font-medium text-gray-700" %>
         <%= form.number_field :score_team1,
                               class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50" %>
       </div>
 
       <div class="w-full space-y-2">
-        <%= form.label :score_team2, "Score Team 2", class: "block text-sm font-medium text-gray-700" %>
+        <%= form.label :score_team2, "Score Équipe 2", class: "block text-sm font-medium text-gray-700" %>
         <%= form.number_field :score_team2,
                               class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50" %>
       </div>
