feat(layout): mettre à jour le titre et le footer, ajouter un lien vers la page des joueurs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LolProject</title>
+    <title>LoL Tournoi</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -17,6 +17,6 @@
     <main class="container mx-auto mt-16 px-5">
       <%= yield %>
     </main>
-    <%= render 'shared/footer' %>
   </body>
+  <%= render 'shared/footer' %>
 </html>
