--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
           <svg class="h-8 w-8 text-blue-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
           </svg>
-          <span class="ml-2 text-white font-bold text-xl">SportApp</span>
+          <span class="ml-2 text-white font-bold text-xl">LoL Tournoi</span>
         </div>
         <p class="text-sm text-gray-400 mb-4">
           Suivez tous vos matchs sportifs favoris en un seul endroit. Résultats en temps réel, statistiques et plus encore.
