--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -35,6 +35,13 @@
           Tous les matchs
         <% end %>
 
+        <%= link_to players_path, class: "nav-link inline-flex items-center px-3 py-2 rounded-md text-sm font-medium #{current_page?(players_path) ? 'bg-blue-800 text-white' : 'text-blue-50 hover:bg-blue-500 hover:text-white transition duration-150 ease-in-out'}" do %>
+          <svg class="mr-1.5 h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+          </svg>
+          Tous les joueurs
+        <% end %>
+
         <% if current_user %>
           <%= link_to user_path(current_user), class: "nav-link inline-flex items-center px-3 py-2 rounded-md text-sm font-medium #{current_page?(user_path(current_user)) ? 'bg-blue-800 text-white' : 'text-blue-50 hover:bg-blue-500 hover:text-white transition duration-150 ease-in-out'}" do %>
             <svg class="mr-1.5 h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -77,6 +84,15 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
           </svg>
           Tous les matchs
+        </div>
+      <% end %>
+
+      <%= link_to players_path, class: "nav-link block px-3 py-2 rounded-md text-base font-medium #{current_page?(players_path) ? 'bg-blue-800 text-white' : 'text-blue-50 hover:bg-blue-500 hover:text-white'}" do %>
+        <div class="flex items-center">
+          <svg class="mr-3 h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+          </svg>
+          Tous les joueurs
         </div>
       <% end %>
 
